force-app/main/default/objects/PPF_Account__c/PPF_Account__c.object-meta.xml
<CustomObject>
    <label>PPF Account</label>
    <nameField>
        <displayFormat>PPF-{0000}</displayFormat>
        <label>PPF Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPF Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>