force-app/main/default/objects/PPF_Account__c/fields/Total_Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested_Amount__c</fullName>
    <label>Total Invested Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>