force-app/main/default/objects/PPF_Account__c/fields/Yearly_Investment__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Investment__c</fullName>
    <label>Yearly Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>