force-app/main/default/objects/PPF_Account__c/validationRules/Validate_Time_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Time_Period</fullName>
    <active>true</active>
    <errorConditionFormula>Time_Period__c &lt; 5</errorConditionFormula>
    <errorDisplayField>Time_Period__c</errorDisplayField>
    <errorMessage>Time Period (in years) should not be less than 5.</errorMessage>
</ValidationRule>