force-app/main/default/objects/PPF_Account__c/validationRules/Validate_Yearly_Investment.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Yearly_Investment</fullName>
    <active>true</active>
    <errorConditionFormula>Yearly_Investment__c &gt; 150000</errorConditionFormula>
    <errorDisplayField>Yearly_Investment__c</errorDisplayField>
    <errorMessage>Yearly Investment should not be above 150,000.</errorMessage>
</ValidationRule>